fix: modifica varibili immagine con file
